<resources>
    <string name="app_name">CalcuDose</string>
    <string name="etxtBG">Enter BG</string>
    <string name="btnCalculate">Calculate Dose</string>
    <string name="btnLog">Log Event</string>
    <string name="txtvRatios">Current Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>



    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="imgBtnLogFood">Log Food Image Button</string>
    <string name="title_activity_log_bg">LogBG</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_food">Log Food</string>
    <string name="title_activity_add_food">Add Food</string>
    <string name="title_activity_view_logs">View Logs</string>
    <string name="title_activity_food_dose_result">Dose with Food Result</string>
    <string name="btnLogFood">Log Food</string>
    <string name="btnLogBloodGlucose">Log Blood Glucose</string>
    <string name="btnViewLogs">View Logs</string>
    <string name="btnSettings">Settings</string>
    <string name="txt_settings_targetBloodGlucose">Target Blood Glucose :</string>
    <string name="txt_settings_insulinSensitivityFactor">Insulin Sensitivity Factor :</string>
    <string name="txt_settings_insulinToCarbRatio">Insulin to Carbohydrate Ratio :</string>
    <string name="btn_settings_save">Save Values</string>

    <string name="etxt_insulinSensitivityFactor"></string>
    <string name="etxt_tagetBloodGlucose"></string>
    <string name="etxt_insulinToCarbRatio"></string>
    <string name="etxt_cv_insulinToCarbRatio"></string>
    <string name="etxt_cv_insulinSensitivityFactor"></string>
    <string name="txt_cv_targetBloodGlucose"></string>

    <string name="currentTarget"></string>
    <string name="currentIsf"></string>
    <string name="currentRatio"></string>

    <string name="tvCurrentTarget"></string>
    <string name="tvCurrentIsf"></string>
    <string name="tvCurrentRatio"></string>


    <string-array name="foodList">
        <item>Hormel Black Label Maple Bacon</item>
        <item>Banana</item>
        <item>Horizon Organic Whole Milk</item>
        <item>Large Egg</item>
        <item>Nature"'"s Own ButterBread</item>
        <item>Medium Apple</item>
        <item>Subway Footlong Club Sandwich</item>
        </string-array>


    <string-array name="servingsFraction">
        <item> </item>
        <item>1/8</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>3/8</item>
        <item>1/2</item>
        <item>5/8</item>
        <item>2/3</item>
        <item>3/4</item>
        <item>7/8</item>
    </string-array>

    <string-array name="servingsWhole">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="btnAddNewFood">Add New Food</string>
    <string name="txtv_ServingSize">Serving Size</string>
    <string name="txtv_NumberServings">Number of Servings</string>
    <string name="txtv_nutritionFacts">Nutrition Facts</string>
    <string name="txtv_Fat">Fat (g)</string>
    <string name="txtv_Carbs">Carbs (g)</string>
    <string name="txtv_protein">Protein (g)</string>
    <string name="txtv_FoodBeingAdded">Name of food here.</string>
    <string name="btnCalculateDoseFood">Calculate dose for this food</string>
    <string name="etxt_numberofservings"></string>
    <string name="title_activity_servings">Servings</string>
    <string name="txtv_currentBGservings">Current BG</string>


</resources>
