<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etxtBG"
        android:hint="@string/etxtBG"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/etxtBG"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvRatios"
        android:id="@+id/txtvRatios"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_targetBloodGlucose"
        android:id="@+id/txt_settings_targetBloodGlucose"
        android:layout_below="@+id/txtvRatios"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_insulinSensitivityFactor"
        android:id="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_below="@+id/txt_settings_targetBloodGlucose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_insulinToCarbRatio"
        android:id="@+id/txt_settings_insulinToCarbRatio"
        android:layout_below="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentTarget"
        android:id="@+id/tvCurrentTarget"
        android:layout_above="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentIsf"
        android:id="@+id/tvCurrentIsf"
        android:layout_alignBottom="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignRight="@+id/tvCurrentTarget"
        android:layout_alignEnd="@+id/tvCurrentTarget" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentRatio"
        android:id="@+id/tvCurrentRatio"
        android:layout_alignBottom="@+id/txt_settings_insulinToCarbRatio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
