<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.calcudose.Servings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_FoodBeingAdded"
        android:id="@+id/txtv_FoodBeingAdded"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_ServingSize"
        android:id="@+id/txtv_ServingSize"
        android:layout_below="@+id/txtv_FoodBeingAdded"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_NumberServings"
        android:id="@+id/txtv_NumberServings"
        android:layout_below="@+id/txtv_ServingSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_nutritionFacts"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/txtv_NumberServings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_Fat"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_Carbs"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_protein"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fat grams"
        android:id="@+id/nf_fat"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="carbs grams"
        android:id="@+id/nf_carbs"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="protein grams"
        android:id="@+id/nf_protein"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtv_servings"
        android:layout_above="@+id/txtv_NumberServings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculateDoseFood"
        android:id="@+id/btnCalculateDoseFood"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />

    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etxt_numberofservings"
        android:layout_below="@+id/txtv_ServingSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/etxt_numberofservings" />

    <EditText
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etxtBG"
        android:hint="@string/etxtBG"
        android:textSize="30sp"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/btnCalculateDoseFood"
        android:layout_alignRight="@+id/nf_carbs"
        android:layout_alignEnd="@+id/nf_carbs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_currentBGservings"
        android:id="@+id/textView12"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/etxtBG"
        android:layout_alignBottom="@+id/etxtBG"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
