<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.calcudose.Menu">

    <Button
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:text="@string/btnLogFood"
        android:id="@+id/btnLogFood"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="15sp" />


    <Button
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:text="@string/btnLogBloodGlucose"
        android:id="@+id/btnLogBloodGlucose"
        android:layout_below="@+id/btnLogFood"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="20sp" />

    <Button
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:text="@string/btnViewLogs"
        android:id="@+id/btnViewLogs"
        android:layout_below="@+id/btnLogBloodGlucose"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="20sp" />

    <Button
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:text="@string/btnSettings"
        android:id="@+id/btnSettings"
        android:layout_below="@+id/btnViewLogs"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="20sp" />

</RelativeLayout>
