<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.calcudose.ListFoodDose">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/etxtBG"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvRatios"
        android:id="@+id/txtvRatios"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_targetBloodGlucose"
        android:id="@+id/txt_settings_targetBloodGlucose"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtvRatios"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_insulinSensitivityFactor"
        android:id="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_settings_targetBloodGlucose"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings_insulinToCarbRatio"
        android:id="@+id/txt_settings_insulinToCarbRatio"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentTarget"
        android:id="@+id/tvCurrentTarget"
        android:layout_above="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentIsf"
        android:id="@+id/tvCurrentIsf"
        android:layout_alignBottom="@+id/txt_settings_insulinSensitivityFactor"
        android:layout_alignRight="@+id/tvCurrentTarget"
        android:layout_alignEnd="@+id/tvCurrentTarget" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentRatio"
        android:id="@+id/tvCurrentRatio"
        android:layout_alignBottom="@+id/txt_settings_insulinToCarbRatio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80sp"
        android:layout_height="70sp"
        android:text="Call 911"
        android:id="@+id/btn_call_911"
        android:layout_alignTop="@+id/btn_show_medicalId"
        android:layout_alignRight="@+id/tvCurrentRatio"
        android:layout_alignEnd="@+id/tvCurrentRatio" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110sp"
        android:layout_height="70sp"
        android:text="Call Emergency Contact"
        android:id="@+id/btn_call_emergency_contact"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today&apos;s Date and Time :"
        android:id="@+id/textView19"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/displayDate"
        android:textColor="#000000"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="70sp"
        android:text="Show Medical ID"
        android:id="@+id/btn_show_medicalId"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtvRatios"
        android:layout_alignStart="@+id/txtvRatios" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FOOD NAME: "
        android:id="@+id/tv_foodname_here"
        android:textSize="15sp"
        android:layout_below="@+id/displayDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25sp"
        android:textColor="#000000" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fat (g) :"
        android:id="@+id/tv_fat"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_below="@+id/tv_foodname_here"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carbs (g) :"
        android:id="@+id/tv_carbs"
        android:layout_below="@+id/tv_fat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_marginTop="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Protein (g) :"
        android:id="@+id/tv_protein"
        android:layout_below="@+id/tv_carbs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_marginTop="15sp" />


    <EditText
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="3"
        android:id="@+id/etxtBG"
        android:hint="@string/etxtBG"
        android:textSize="30sp"
        android:layout_below="@+id/displayDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="food name"
        android:id="@+id/tv_dffl_foodname"
        android:layout_alignBottom="@+id/tv_foodname_here"
        android:layout_toRightOf="@+id/tv_foodname_here"
        android:layout_toEndOf="@+id/tv_foodname_here"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fat"
        android:id="@+id/tv_dffl_fat"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_alignTop="@+id/tv_fat"
        android:layout_toRightOf="@+id/tv_fat"
        android:layout_toEndOf="@+id/tv_fat"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="food carbs"
        android:id="@+id/tv_dffl_carbs"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_alignBottom="@+id/tv_carbs"
        android:layout_alignLeft="@+id/btnCalculate"
        android:layout_alignStart="@+id/btnCalculate"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="food protein"
        android:id="@+id/tv_dffl_protein"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_alignTop="@+id/tv_protein"
        android:layout_alignLeft="@+id/tv_dffl_carbs"
        android:layout_alignStart="@+id/tv_dffl_carbs"
        android:layout_marginLeft="10sp" />

</RelativeLayout>
